--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: Test
 
 on: [push]
 
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Run unittests
       run: |
-        pylint --rcfile=.pylintrc $(git ls-files '*.py')
+        python run_tests.py
